--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,31 @@
 
 .vscode/settings.json
 Linkedin-Scraper/access.txt
+Linkedin-Scraper/notebook.ipynb
+Linkedin-Scraper/links8.txt
+Linkedin-Scraper/links7.txt
+Linkedin-Scraper/links6.txt
+Linkedin-Scraper/links5.txt
+Linkedin-Scraper/links4.txt
+Linkedin-Scraper/links2.txt
+Linkedin-Scraper/links1.txt
+Linkedin-Scraper/teste2.csv
+Linkedin-Scraper/teste3.csv
+Linkedin-Scraper/teste9.csv
+Linkedin-Scraper/teste8.csv
+Linkedin-Scraper/teste6.csv
+Linkedin-Scraper/teste5.csv
+Linkedin-Scraper/teste4.csv
+Linkedin-Scraper/teste.csv
+Linkedin-Scraper/links.txt
+Linkedin-Scraper/links-company.txt
+Linkedin-Scraper/link3.txt
+Linkedin-Scraper/links.txt
+Linkedin-Scraper/backup.txt
+Bairros-Brasil.csv
+Bairros do Sul.csv
+Bairros do Sudeste.csv
+Bairros do Centro Oeste.csv
+Linkedin-Scraper/links.txt
+Linkedin-Scraper/links.txt
+Linkedin-Scraper/links.txt
